# omni-palette-desktop

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  config.toml
.codex/environments/: environment.toml
.github/workflows/: guard-generated-catalog.yml  publish-extension.yml
ADR/: 0001_ui_tooling.md  0002_extension_config_design.md  0002_extension_plugin_design.md  0003_extension_plugin_design.md
Design/: 01_fuzzy_scorer.md  02_user_command_overrides_and_app_focus_mode.md  03_long_running_stability_checklist.md  Overview.md
apps/desktop-tauri/: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/src/: App.svelte  App.tsx  DebugOverlay.svelte  Guide.svelte  Settings.svelte  commands.test.ts  commands.ts  main.ts  svelte-entry.test.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: debug_overlay.rs  guide_lifecycle.rs  hotkey_bridge.rs  lib.rs  main.rs  settings_window.rs  window_lifecycle.rs
docs/knowledge/: 001-ui-tooling.md  002-extension-system.md  003-fuzzy-search.md  004-command-overrides-and-focus-mode.md  005-runtime-stability.md  006-hotkey-and-accelerator-research.md  README.md
docs/migration/: svelte-tauri-migration-plan.md  tauri-migration-plan.md  tauri-parity-checklist.md
docs/migration/assets/: README.md
extensions/: README.md  chrome.toml  window_file.toml
extensions/auto_typer/: plugin.toml  plugin.wasm  plugin.wat
extensions/bundled/: .ignore.toml  ignore.toml
extensions/bundled/static/: chrome.toml  type_a.toml  window_file.toml  windows.toml
extensions/registry/: README.md  catalog.v1.json  catalog.v1.json.sig
extensions/static/: chrome.toml  window_file.toml  windows.toml
extentions/: chrome.toml
knowledge document/: 0000_knowledge_templete.md  0001_getting_all_access_key_HWDN.md  0002_conflict_in_interceptor_tooling.md
src/: backend_contract.rs  extension_management.rs  layout.md  lib.rs  main.rs  runtime_state.rs
src/config/: extension.rs  ignore.rs  mod.rs  runtime.rs
src/core/: command_filter.rs  context.rs  mod.rs  performance.rs  search.rs
src/core/extensions/: catalog.rs  discovery.rs  extensions.rs  install.rs  mod.rs  package.rs  settings.rs
src/core/plugins/: command.rs  manifest.rs  mod.rs  registry.rs  runtime.rs  wasm_plugin.rs
src/core/register_action/: register_action.rs
src/core/registry/: registry.rs
src/domain/: action.rs  hotkey.rs
src/models/: action.rs  config.rs  hotkey.rs  mod.rs
src/platform/: hotkey.rs  hotkey_actions.rs  mod.rs  platform_interface.rs  register_receiver.rs  ui_support.rs
src/platform/windows/: mod.rs  (+3 more)
src/theme/: mod.rs
src/ui/: app.rs  combo_box.rs  debug_overlay.rs  guide.rs  mod.rs  palette.rs  settings.rs  ui_main.rs
ui_design/: ui.drawio
xtask/: Cargo.toml
xtask/src/: main.rs
(+41 files in other folders)
