[package]
name = "global_palette"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_Security",
    "Win32_Data",
] }

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.29"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
env_logger = "0.11.8"
