[package]
name = "omni_palette"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_UI_Accessibility",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Security",
    "Win32_Data",
    "Win32_Graphics",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
] }

toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.29"
strum = { version = "0.27", features = ["derive"] }
strum_macros = "0.27"
env_logger = "0.11.8"
linked_hash_set = "0.1.6"
raw-window-handle = "0.6.2"
cfg-if = "1.0.4"
egui = "0.34.1"
eframe = "0.34.1"
wasmtime = "38"
sha2 = "0.10"
semver = "1"
tempfile = "3"
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tray-icon = "0.22"
