[package]
name = "omni_palette_desktop_tauri"
version = "0.1.0"
description = "Phase 2 Tauri wireframe for Omni Palette"
edition = "2021"

[lib]
name = "omni_palette_desktop_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
